# hugon

./: CHANGELOG.md  CMakeLists.txt  LICENSE  README.md
arduino/: .LICENSE.swp  README.md  library.properties
arduino/examples/BasicParse/: BasicParse.ino
arduino/examples/CommandDecoder/: CommandDecoder.ino
arduino/examples/SerialStream/: SerialStream.ino
arduino/extras/test/: CMakeLists.txt  test_minijson.cpp
arduino/src/: MiniJson.h
build_ci/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
build_ci/Testing/Temporary/: CTestCostData.txt
build_ci/arduino/extras/test/: CTestTestfile.cmake  Makefile  cmake_install.cmake  test_minijson  test_minijson_nofloat
build_ci/tests/: CTestTestfile.cmake  Makefile  cmake_install.cmake
cmake/: hugonConfig.cmake.in
examples/: CMakeLists.txt  example1_pretty_print.cpp  example2_alter_json.cpp  example3_create_json.cpp
include/hugon/: DJSON.h  Hugon.h
src/: DJSON.cpp  Hugon.cpp
tests/: CMakeLists.txt  schemaBig.json  test_hugon.cpp
